Updated contact info across all pages

--- a/ai-call-center.html
+++ b/ai-call-center.html
@@ -895,8 +895,9 @@
           <div class="footer__column">
             <h4>Contact</h4>
             <ul>
-              <li>hello@kivra.services</li>
-              <li>+1 (555) 123-4567</li>
+              <li>sales@kivra.services</li>
+              <li>+91 9182579173</li>
+              <li>+91 9182249405</li>
               <li>Tech Innovation Hub</li>
               <li>Digital District, TC 10101</li>
             </ul>
