--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             </div>
             <div class="contact-item__content">
               <h4>Email Us</h4>
-              <p>hello@kivra.services</p>
+              <p>sales@kivra.services</p>
             </div>
           </div>
           
@@ -372,7 +372,7 @@
             </div>
             <div class="contact-item__content">
               <h4>Call Us</h4>
-              <p>+1 (555) 123-4567</p>
+              <p>+91 9182579173<br>+91 9182249405</p>
             </div>
           </div>
           
@@ -467,8 +467,9 @@
           <div class="footer__column">
             <h4>Contact</h4>
             <ul>
-              <li>hello@kivra.services</li>
-              <li>+1 (555) 123-4567</li>
+              <li>sales@kivra.services</li>
+              <li>+91 9182579173</li>
+              <li>+91 9182249405</li>
               <li>Tech Innovation Hub</li>
               <li>Digital District, TC 10101</li>
             </ul>
